[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vemstitch"
dynamic = ["version"]

description = "vEMStitch"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "opencv-python-headless",
    "scipy",
		"joblib"
]

[tool.hatch.version]
path = "source/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["source/"]
